...
            <objects>
                <viewController id="Q6Z-eh-KNI" customClass="LoginFormViewController" customModule="OMartinezEcommerce" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="9Fe-0d-yDW">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="LaS-3K-WuH">
                                <rect key="frame" x="68" y="81" width="256" height="214"/>
                                <color key="tintColor" name="Color"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="215.33000000000001" id="99z-mI-a7o"/>
                                    <constraint firstAttribute="width" constant="256" id="rj1-gB-dnd"/>
                                </constraints>
                            </imageView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nop-a4-E21">
                                <rect key="frame" x="10" y="305.33333333333326" width="373" height="492.66666666666674"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="gL5-ib-gxL">
                                        <rect key="frame" x="50" y="25" width="273" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="aGe-fB-ztQ"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="FtF-lP-fAD">
                                        <rect key="frame" x="50" y="105" width="273" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="FNp-Yq-fCz"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3tZ-Xz-9Y3">
                                        <rect key="frame" x="50" y="235.00000000000006" width="273" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="3a1-g9-7YF"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Login">
                                            <fontDescription key="titleFontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="20"/>
                                            <color key="baseForegroundColor" name="Bg3"/>
                                            <color key="baseBackgroundColor" name="Color"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <action selector="LoginAction:" destination="Q6Z-eh-KNI" eventType="touchUpInside" id="9s1-J9-eej"/>
...
